--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "lite": "lite-server",
     "start": "npm run lite",
+    "scss": "node-sass -o css/ css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0",
-    "liteserver": "^0.3.0"
+    "liteserver": "^0.3.0",
+    "node-sass": "^4.12.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
